--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <h1>Добре дошли в страницата с направени задачи от Ивайло Дешов</h1>
     <hr>
-    <a href="/HW/pages/CV.html"><h4>Автобиография</h4></a>
-    <a href="/HW/pages/personalPage.html"><h4>Лична страница</h4></a>
+    <a href="./pages/CV.html"><h4>Автобиография</h4></a>
+    <a href="./pages/personalPage.html"><h4>Лична страница</h4></a>
     <a href="./pages/1_Ordered_and_Unordered_lists.html"><h4>Web design самоучители / Ordered and unordered lists</h4></a>
     <a href="./pages/2_Nested_lists_food.html"><h4>Любими храни / Nested lists</h4></a>
     <a href="./pages/3_Nested_list_music.html"><h4>Любима музика / Nested lists</h4></a>
