--- a/pages/personalPage.html
+++ b/pages/personalPage.html
@@ -17,11 +17,11 @@
     <br>
     <h2>Запознайте се с Лора и Лео</h2>
     <br>
-    <a href="/HW/images/personalPage/lora_and_leo.jpg"><img src="/HW/images/personalPage/lora_and_leo_small.jpg" alt="Leo and Lora"></a>
-    <a href="/HW/images/personalPage/Leo1.jpg"><img src="/HW/images/personalPage/Leo1_small.jpg" alt="Leo 1"></a>
-    <a href="/HW/images/personalPage/Leo3.jpg"><img src="/HW/images/personalPage/Leo3_small.jpg" alt="Leo 3"></a>
-    <a href="/HW/images/personalPage/Leo2.jpg"><img src="/HW/images/personalPage/Leo2_small.jpg" alt="Leo 2"></a>
-    <a href="/HW/images/personalPage/Lora2.jpg"><img src="/HW/images/personalPage/Lora2_small.jpg" alt="Lora 1"></a>
+    <a href="../images/personalPage/lora_and_leo.jpg"><img src="../images/personalPage/lora_and_leo_small.jpg" alt="Leo and Lora"></a>
+    <a href="../images/personalPage/Leo1.jpg"><img src="../images/personalPage/Leo1_small.jpg" alt="Leo 1"></a>
+    <a href="../images/personalPage/Leo3.jpg"><img src="../images/personalPage/Leo3_small.jpg" alt="Leo 3"></a>
+    <a href="../images/personalPage/Leo2.jpg"><img src="../images/personalPage/Leo2_small.jpg" alt="Leo 2"></a>
+    <a href="../images/personalPage/Lora2.jpg"><img src="../images/personalPage/Lora2_small.jpg" alt="Lora 1"></a>
     
 </body>
 </html>
