--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="./pages/1_Ordered_and_Unordered_lists.html"><h4>Web design самоучители / Ordered and unordered lists</h4></a>
     <a href="./pages/2_Nested_lists_food.html"><h4>Любими храни / Nested lists</h4></a>
     <a href="./pages/3_Nested_list_music.html"><h4>Любима музика / Nested lists</h4></a>
+    <a href="./pages/selectedCodepens.html"><h4>Избрани Codepans</h4></a>
 </body>
 </html>
