New pages added: Slot_Machine.html and Fifa_Table.html

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <a href="./pages/2_Nested_lists_food.html"><h4>Любими храни / Nested lists</h4></a>
     <a href="./pages/3_Nested_list_music.html"><h4>Любима музика / Nested lists</h4></a>
     <a href="./pages/selectedCodepens.html"><h4>Избрани Codepans</h4></a>
+    <a href="./pages/Slot_Machine.html"><h4>Slot machine</h4></a>
+    <a href="./pages/FIFA_Table.html"><h4>FIFA Table</h4></a>
 </body>
 </html>
