registration page added. main.css added

--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            background-color:rgb(206, 206, 206);
-            }    
-    </style>
+   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <h1>Добре дошли в страницата с направени задачи от Ивайло Дешов</h1>
     <hr>
-    <a href="./pages/CV.html"><h4>Автобиография</h4></a>
-    <a href="./pages/personalPage.html"><h4>Лична страница</h4></a>
-    <a href="./pages/1_Ordered_and_Unordered_lists.html"><h4>Web design самоучители / Ordered and unordered lists</h4></a>
-    <a href="./pages/2_Nested_lists_food.html"><h4>Любими храни / Nested lists</h4></a>
-    <a href="./pages/3_Nested_list_music.html"><h4>Любима музика / Nested lists</h4></a>
-    <a href="./pages/selectedCodepens.html"><h4>Избрани Codepans</h4></a>
-    <a href="./pages/Slot_Machine.html"><h4>Slot machine</h4></a>
-    <a href="./pages/FIFA_Table.html"><h4>FIFA Table</h4></a>
+    <ul>
+        <li><a href="./pages/CV.html"><h4>Автобиография</h4></a></li>
+        <li><a href="./pages/personalPage.html"><h4>Лична страница</h4></a></li>
+        <li><a href="./pages/1_Ordered_and_Unordered_lists.html"><h4>Web design самоучители / Ordered and unordered lists</h4></a></li>
+        <li><a href="./pages/2_Nested_lists_food.html"><h4>Любими храни / Nested lists</h4></a></li>
+        <li><a href="./pages/3_Nested_list_music.html"><h4>Любима музика / Nested lists</h4></a></li>
+        <li><a href="./pages/selectedCodepens.html"><h4>Избрани Codepans</h4></a></li>
+        <li><a href="./pages/Slot_Machine.html"><h4>Slot machine</h4></a></li>
+        <li><a href="./pages/FIFA_Table.html"><h4>FIFA Table</h4></a></li>
+        <li><a href="./pages/simpleFormControls.html"><h4>Регистрация</h4></a></li>
+    </ul>
 </body>
 </html>
