--- a/pages/Slot_Machine.html
+++ b/pages/Slot_Machine.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slot Machine</title>
-    <style>
-        body {
-        background-color:rgb(206, 206, 206);
-        }    
-    </style>
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
     <a href="../index.html">към главна страница</a>
