--- a/pages/personalPage.html
+++ b/pages/personalPage.html
@@ -5,11 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ivayo Deshov personal page</title>
-    <style>
-        body {
-            background-color:rgb(206, 206, 206);
-            }    
-        </style>
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
     <h1>Лична страница на Ивайло Дешов</h1>
