--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li><a href="./pages/Slot_Machine.html"><h4>Slot machine</h4></a></li>
         <li><a href="./pages/FIFA_Table.html"><h4>FIFA Table</h4></a></li>
         <li><a href="./pages/simpleFormControls.html"><h4>Регистрация</h4></a></li>
+        <!-- да се довършат -->
+        <li><a href="./pages/crowPage.html"><h4>Едгар Алън По - Гарванът</h4></a></li>
+        <li><a href="./pages/AphorismsList.html"><h4>AphorismsList</h4></a></li>
     </ul>
 </body>
 </html>
