--- a/pages/CV.html
+++ b/pages/CV.html
@@ -18,10 +18,10 @@
         <h2>Personal Details</h2>
         <hr>
         <p>First name(s) / Surname(s): <b> Ivaylo Dimitrov Deshov</b></p>
-        <p>Phone: <b> 0879431118</b></p>
-        <p>E-mail: <b> deshov@yahoo.com</b></p>
+        <p>Phone: <b> #########</b></p>
+        <p>E-mail: <b> #######@#####.com</b></p>
         <p>I live in: <b> Sofia/Bulgaria</b></p>
-        <p>Birth date: <b> 31.07.1986</b></p>
+        <p>Birth date: <b> 01.01.1900</b></p>
         <p>Gender: <b> Male</b></p>
         <br>
         <h2>Work Experience</h2>
